# build-dir-status

./: .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: build.yml  clang-format-check.yml  cppcheck.yml  windows_build.yml
src/: BuildDirectoryInfo.cpp  BuildDirectoryInfo.hpp  TimeUtilities.cpp  TimeUtilities.hpp  main.cpp
test/: BuildDirectoryInfo_GTest.cpp  TimeUtilities_GTest.cpp  resources.hxx.in
test/OS-build/: branch_test.txt
